<resources>
    <string name="app_name">Brots</string>
    <string name="hello_blank_fragment">Fragment</string>
    <string name="distritos_disponibles">Distritos disponibles</string>
    <string name="buscar">Buscar...</string>
    <string name="loremp_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="todo">TODO</string>
    <string name="noticia">Titulo de la noticia</string>
    <string name="inicial_texto">Usar tus credenciales de autenticación facilitaran el acceso a nuestras distintas plataformas.</string>
    <string name="cargando">Cargando..</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="fecha">Fecha de Entrega :</string>
    <string name="pastel">(Pastel)</string>
    <string name="tel_opcional">Tel.Opcional</string>
    <string name="tel_celular">Tel.Celular</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="reservar">Reservar</string>
    <string name="direcci_n">Dirección</string>
    <string name="selecciona_distrito">Selecciona Distrito</string>
    <string name="tipo">Tipo</string>
    <string name="precio">Precio</string>
    <string name="metodo_de_pago">Método de Pago :</string>
    <string name="post_entrega">Efectivo</string>
    <string name="pre_entrega">Tarjeta</string>
    <string name="regresar">Regresar</string>
    <string name="datos_del_producto">Datos del Producto</string>
    <string name="producto">Producto</string>
    <string name="texto_base">Aqui Texto</string>
    <string name="precio_s">Precio: S/.</string>
    <string name="estado">Estado</string>
    <string name="link_recetas">Deseas ver las recetas?</string>
    <string name="presiona_aqu">Presiona aquí!</string>
    <string name="cafeteria">Cafetería</string>
    <string name="llamanos">Llamanos!</string>
    <string name="brot_s">Brot\'s</string>
    <string name="bienvenido_a_brot_s">Bienvenido a Brot\'s</string>
    <string name="texto_ingresa_correo">Ingresa con tu correo y contraseña para continuar.</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="registrate_ahora">Registrate ahora!</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="has_olvidado_tu_contrase_a">Has olvidado tu contraseña?</string>
    <string name="bienvenido">Bienvenido a Brot\'s</string>
    <string name="texto_arriba">Ingresa con tu correo y contraseña para continuar.</string>
    <string name="texto_largo">Usar tus credenciales de autenticación facilitaran el acceso a nuestras distintas plataformas.</string>
    <string name="registrarse">Registrarse</string>
    <string name="texto_largo2">Registrar tus credenciales en esta aplicación, facilitará el acceso a nuestras distintas plataformas.</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="nombres">Nombres</string>
    <string name="mercadoPago">imgMPago</string>
    <string name="paypal">Paypal</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="calendar">calendar</string>
    <string name="time">time</string>
    <string name="hora">Hora</string>
    <string name="cantidad">Cantidad :</string>
    <string name="fecha_y_d_a_de_entrega">Fecha y Día de Entrega</string>
    <string name="nombre_pedido">Nombre :</string>
    <string name="tel_celular_pedido">Tel.Celular :</string>
    <string name="direcci_n_pedido">Dirección :</string>
    <string name="celular_del_cliente">Celular del cliente</string>
    <string name="direccion_del_cliente">Direccion del cliente</string>
    <string name="id_del_pedido">Id del Pedido</string>
    <string name="orden">Orden :</string>
    <string name="floating_button">floating_button</string>
    <string name="orden_del_pedido">Id del Pedido</string>
    <string name="distrito">Distrito :</string>
    <string name="a_nombre_de">A nombre de :</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="total_pedido">Total Pedido</string>
    <string name="fecha_del_pedido">Fecha del pedido</string>
    <string name="total">Total :</string>
    <string name="fecha_reserva">Fecha</string>
    <string name="suma">+</string>
    <string name="number_quantity">1</string>
    <string name="resta">-</string>
    <string name="gracias_por_tu_reserva">GRACIAS POR TU RESERVA</string>
    <string name="gracias_por_reservar">Gracias por confiar en nostros</string>
    <string name="texto_nos_comunicaremos">En unos instantes nos comunicaremos con usted al número</string>
    <string name="delete_icon">delete_icon</string>
    <string name="estado_de_la_orden">Estado de la orden:</string>
    <string name="image_pastel">image_pastel</string>
    <string name="img_logo_top">img_logo_top</string>
    <string name="pastel_card">Pastel :</string>
    <string name="precio_card_orden">Precio :</string>
    <string name="number_zero">0</string>
    <string name="datos_del_cliente">Datos del Cliente</string>
    <string name="nombre_y_apellido">Nombre y apellido :</string>
    <string name="celular_card">Celular :</string>
    <string name="distrito_card">Distrito :</string>
    <string name="distrito_del_cliente">Distrito del cliente</string>
    <string name="direcci_n_card">Dirección :</string>
    <string name="datos_de_la_orden">Datos de la Orden</string>
    <string name="hora_card">Hora :</string>
    <string name="hora_de_la_orden">Hora de la orden</string>
    <string name="fecha_card">Fecha :</string>
    <string name="fecha_de_la_orden">Fecha de la orden</string>
    <string name="total_a_pagar_card">Total a pagar :</string>
    <string name="total_de_la_orden">Total de la orden</string>
    <string name="soles_card">Soles</string>
    <string name="whatsapp_image">whatsapp_img</string>

    <string-array name="popup_list">
        <item>Villa el Salvador</item>
        <item>San Juan de Miraflores</item>
        <item>Lurin</item>
        <item>Villa Maria del Triunfo</item>
    </string-array>

</resources>
