<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".vista.Fragments.PasteleriaPackage.PasteleriaReservar">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="4dp"
            android:background="#66000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Titulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/josefinsans_regular"
                android:gravity="center"
                android:text="@string/reservar"
                android:textSize="25sp">

            </TextView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="4dp"
            android:background="#66000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/datos_personales"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/campo_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="phone"
                    android:fontFamily="@font/muli"
                    android:hint="@string/nombre"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/campo_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="phone"
                    android:fontFamily="@font/muli"
                    android:hint="@string/apellidos"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/campo_celular"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="phone"
                    android:fontFamily="@font/muli"
                    android:hint="@string/tel_celular"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/campo_numero_casa"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="phone"
                    android:fontFamily="@font/muli"
                    android:hint="@string/tel_opcional"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/campo_direccion"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:autofillHints="postalAddress"
                android:fontFamily="@font/muli"
                android:hint="@string/direcci_n"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="@font/muli"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/selecciona_distrito"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="4dp"
            android:background="#66000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/datos_del_producto"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/campo_nombre_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:focusable="false"
                android:fontFamily="@font/muli"
                android:hint="@string/producto"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Tipo y precio-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_Field6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/campo_tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:ems="8"
                    android:focusable="false"
                    android:fontFamily="@font/muli"
                    android:hint="@string/tipo"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/campo_precio_prodducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:focusable="false"
                    android:fontFamily="@font/muli"
                    android:hint="@string/precio"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/resValue"
                android:text="@string/resta"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textquantity"
                android:gravity="center"
                android:text="@string/number_quantity"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/addValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suma"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <!--View Fecha y Hora-->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="4dp"
            android:background="#66000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/fecha_y_d_a_de_entrega"
            android:textSize="16sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/campo_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:hint="@string/fecha_reserva"
                    android:importantForAutofill="no"
                    android:inputType="datetime"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_calendar"
                android:contentDescription="@string/calendar"
                android:background="@drawable/ic_calendar"
                android:layout_width="48dp"
                android:onClick="mostrarCalendario"
                android:layout_height="match_parent"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/campo_hora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:fontFamily="@font/muli"
                    android:hint="@string/hora"
                    android:inputType="time"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_hora"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_access_time"
                android:contentDescription="@string/time"
                android:layout_width="48dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <!--View Fecha y Hora-->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="4dp"
            android:background="#66000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/metodo_de_pago"
            android:textSize="16sp" />

        <!--Metodos de pagos-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_efectivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/muli"
                android:text="@string/post_entrega"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/check_tarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/muli"
                android:text="@string/pre_entrega"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <!--Botones-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_comprar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/muli"
                android:text="@string/reservar"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:onClick="back_last_activity"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/muli"
                android:text="@string/regresar"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>